[package]
name = "advanced-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authentication = { path = "./authentication" }
once_cell = "1.19.0"
rand = "0.8.5"


[workspace]
members = ["authentication", "login"]
