[package]
name = "advanced-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authentication = { path = "./authentication" }
crossbeam = "0.8.4"
dashmap = "5.5.3"
once_cell = "1.19.0"
parking_lot = "0.12.3"
rand = "0.8.5"
rayon = "1.10.0"


[workspace]
members = ["authentication", "login"]
